--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -12,7 +12,7 @@ a {
 	color:#fff;
     width: 350px;
     border-radius: 10px;
-   background: linear-gradient(145deg, #9a40a9, #b74cc9);
+   background: linear-gradient(145deg, #ddbee2, #8ec7bf);
 
     border: none
 
